--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "markdown": "^0.5.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
