--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "markdown": "^0.5.0",
+    "mongoose": "^5.5.7",
     "morgan": "~1.9.0",
     "multer": "^1.4.1"
   },
